Closed
Bug 1719135
Opened 4 years ago
Closed 4 years ago
Crash in [@ mozilla::net::HostRecordQueue::MaybeRenewHostRecord]
Categories
(Core :: Networking: DNS, defect, P2)
Tracking
()
RESOLVED
FIXED
92 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox89 | --- | unaffected |
| firefox90 | --- | unaffected |
| firefox91 | --- | wontfix |
| firefox92 | --- | fixed |
People
(Reporter: gsvelto, Assigned: kershaw)
References
(Regression)
Details
(Keywords: crash, regression, Whiteboard: [necko-triaged])
Crash Data
Attachments
(1 file, 1 obsolete file)
Crash report: https://crash-stats.mozilla.org/report/index/ef41b259-3608-4ed9-9c17-07eac0210619
MOZ_CRASH Reason: MOZ_DIAGNOSTIC_ASSERT(inEvictionQ) (Should be in eviction queue)
Top 10 frames of crashing thread:
0 XUL mozilla::net::HostRecordQueue::MaybeRenewHostRecord netwerk/dns/HostRecordQueue.cpp:114
1 XUL nsHostResolver::NativeLookup netwerk/dns/nsHostResolver.cpp:937
2 XUL nsHostResolver::NativeLookup netwerk/dns/nsHostResolver.cpp:937
3 XUL nsHostResolver::CompleteLookupLocked netwerk/dns/nsHostResolver.cpp:1347
4 XUL nsHostResolver::CompleteLookup netwerk/dns/nsHostResolver.cpp:1282
5 XUL mozilla::net::TRRQuery::CompleteLookup netwerk/dns/TRRQuery.cpp:303
6 XUL mozilla::net::TRR::FailData netwerk/dns/TRR.cpp:748
7 XUL mozilla::net::TRR::Run netwerk/dns/TRR.cpp:123
8 XUL nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1146
9 XUL mozilla::ipc::MessagePumpForNonMainThreads::Run ipc/glue/MessagePump.cpp:300
This assertion seems to have been introduced as part of bug 1713796. Kershaw, can you have a look please?
Severity: -- → S2
Comment 1•4 years ago
|
||
Set release status flags based on info from the regressing bug 1713796
status-firefox89:
--- → unaffected
status-firefox90:
--- → unaffected
status-firefox91:
--- → affected
status-firefox-esr78:
--- → unaffected
| Assignee | ||
Updated•4 years ago
|
Assignee: nobody → kershaw
Priority: -- → P2
Whiteboard: [necko-triaged]
| Assignee | ||
Comment 2•4 years ago
|
||
This should be fixed by bug 1544190. Let's wait a bit and see if this is really fixed.
| Assignee | ||
Comment 3•4 years ago
|
||
Updated•4 years ago
|
Updated•4 years ago
|
Attachment #9231540 -
Attachment is obsolete: true
| Assignee | ||
Comment 4•4 years ago
|
||
Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/60420dcdd9fc
Make gTRRService atomic and also avoid doing trrLookup when trr service is not ready, r=necko-reviewers,dragana
Comment 6•4 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch
Updated•4 years ago
|
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•