Bug 1719135 - Make gTRRService atomic and also avoid doing trrLookup when trr service is not ready, r=necko-reviewers,dragana

Differential Revision: https://phabricator.services.mozilla.com/D120621